Remove `JooqDocumentationCrawler` and `JooqDocumentationFetcher` classes. Simplify `InvertedIndex` by removing unused methods and fields. Refactor services for cleaner code and improved memory usage.